fix: removed the absolute center alignment, returning the TOC display logic

--- a/src/theme/DocItem/styles.module.css
+++ b/src/theme/DocItem/styles.module.css
@@ -21,10 +21,6 @@
   padding: 0 0.5rem;
 }
 
-.docItemCol {
-  margin: 0 auto !important;
-}
-
 @media only screen and (min-width: 997px) {
   .docItemCol {
     max-width: 1020px !important;
